# agentic-playbook

./: .agents-md-ignore  .gitattributes  .gitignore  .sync-manifest.json  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Makefile  OWNERS.md  README.md  RELEASING.md  TOOLS.md  llms-full.txt  llms.txt  pyrightconfig.json
base/mcp/anchored-fs/: .gitignore  LICENSE  README.md  delegate.py  install.py  main.py  pyproject.toml  server.json  server.py
base/mcp/anchored-fs/bundle/: bootstrap.sh  health.sh  install.py
base/mcp/anchored-fs/core/: adoption_tracker.py  allowed_root.py  envelope.py  graduation.py  manifest.py  path_resolver.py  stale_read.py  state_store.py  upto_resolver.py
base/mcp/anchored-fs/daemon/: client.py  com.anchored-fs.daemon.plist.template  daemon.py
base/mcp/anchored-fs/hooks/claude-code/: posttool_read.py  pretool_edit.py
base/mcp/anchored-fs/spike/: SPIKE_RESULT.md  proxy_spike.py
base/mcp/anchored-fs/templates/: anchored-fs.toml
base/mcp/anchored-fs/tests/e2e/: test_cross_validator.py  test_resilience.py  test_round_trip.py
base/mcp/anchored-fs/tests/integration/: test_daemon.py  test_delegate.py  test_hooks.py  test_install.py  test_server.py  test_status.py  test_tools.py  test_validators_wired.py
base/mcp/anchored-fs/tests/unit/: test_adoption_tracker.py  test_allowed_root.py  test_envelope.py  test_graduation.py  test_manifest.py  test_path_resolver.py  test_stale_read.py  test_state_store.py  test_upto_resolver.py
base/mcp/anchored-fs/tools/: edit_file.py  preview_edit_match.py
docs/: AGENTS.md  README.md
(+697 files in other folders)
