[project]
name = "anchored-fs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3.1",
    "portalocker>=3.2.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "vcrpy>=8.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"

[tool.pyright]
include = ["core", "tools", "hooks", "daemon", "tests"]
extraPaths = ["."]
